--- a/spring-cloud-client-1/pom.xml
+++ b/spring-cloud-client-1/pom.xml
@@ -44,6 +44,18 @@
 	        <groupId>org.springframework.cloud</groupId>
 	        <artifactId>spring-cloud-starter-config</artifactId>
 	    </dependency>
+		
+		<dependency>
+	        <groupId>org.apache.rocketmq</groupId>
+	        <artifactId>rocketmq-client</artifactId>
+	        <version>4.4.0</version>
+		</dependency>
+		
+<!--         加载jdbc连接数据库   -->
+<!--         <dependency>   -->
+<!--             <groupId>org.springframework.boot</groupId>   -->
+<!--              <artifactId>spring-boot-starter-jdbc</artifactId>   -->
+<!--         </dependency> -->
 	</dependencies>
 
 	<dependencyManagement>
