--- a/spring-cloud-client-2/pom.xml
+++ b/spring-cloud-client-2/pom.xml
@@ -36,9 +36,40 @@
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
+			<artifactId>spring-boot-starter-test</artifactId> 
 			<scope>test</scope>
 		</dependency>
+		
+		<dependency>
+	        <groupId>org.apache.rocketmq</groupId>
+	        <artifactId>rocketmq-client</artifactId>
+	        <version>4.4.0</version>
+		</dependency>
+		
+		
+        <dependency>
+	        <groupId>io.sentry</groupId>
+	        <artifactId>sentry</artifactId>
+	        <version>1.7.5</version>
+	    </dependency>
+	    
+	    
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-redis</artifactId>
+		</dependency>
+		
+<!-- 		<dependency>   -->
+<!--             <groupId>org.postgresql</groupId>   -->
+<!--             <artifactId>postgresql</artifactId>   -->
+<!--             <scope>runtime</scope>   -->
+<!--         </dependency> -->
+<!--         加载jdbc连接数据库   -->
+<!--         <dependency>   -->
+<!--             <groupId>org.springframework.boot</groupId>   -->
+<!--              <artifactId>spring-boot-starter-jdbc</artifactId>   -->
+<!--         </dependency> -->
+        
 	</dependencies>
 
 	<dependencyManagement>
