--- a/spring-cloud-client-2/src/main/resources/application.yml
+++ b/spring-cloud-client-2/src/main/resources/application.yml
@@ -5,5 +5,23 @@ eureka:
     serviceUrl:
       defaultZone: http://localhost:9001/eureka/  # 服务中心地址
 spring:
+  redis:
+    database: 0
+    host: 127.0.0.1
+    port: 6379
+    password: kusokuso
+    timeout: 5000
+    jedis:
+      pool:
+        max-idle: 8
+        min-idle: 0
+        max-wait: -1
+        max-active: 20
+#    lettuce:
+#      pool:
+#        max-idle: 8
+#        min-idle: 0
+#        max-wait: -1
+#        max-active: 20
   application:
     name: client1 # 客户端的名字
